# Suicide-Detection

./: .gitattributes  README.md  app.py  main.py  pyproject.toml  requirements.txt
models/: label_encoder.pkl  model_lstm.h5  tokenizer_lstm.pkl
models/model_distilbert/: model.safetensors
models/model_roberta/: model.safetensors
notebook/: UAP_MACHINE_LEARNING.ipynb
