[project]
name = "suicide-detection-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
